Fixed spacing between search box and maps box. TODO: fix map appearing.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -51,7 +51,6 @@ body{
   border-radius: 5px;
   box-shadow: 0 0 5px #666;
   margin-top: 5%;
-  margin-bottom: 5%;
 }
 #text-wrap h2{
   font-weight: 900;
